--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "tinacms dev -c \"next dev\"",
-        "build": "tinacms build --skip-cloud-checks --skip-indexing && next build",
+        "build": "tinacms build --skip-cloud-checks && next build",
         "start": "next start",
         "lint": "next lint"
     },
