--- a/content/projects/project-1.json
+++ b/content/projects/project-1.json
@@ -4,7 +4,7 @@
     "category": "مطابخ",
     "completionDate": "2025-10-15",
     "images": [
-        "/projects/project-1-main.jpg",
-        "/projects/project-1-detail.jpg"
+        "/images/WhatsApp Image 2026-02-20 at 6.50.05 AM.jpeg",
+        "/images/WhatsApp Image 2026-02-20 at 2.32.00 PM.jpeg"
     ]
 }
