--- a/content/projects/project-2.json
+++ b/content/projects/project-2.json
@@ -4,7 +4,7 @@
     "category": "غرف ملابس",
     "completionDate": "2025-11-20",
     "images": [
-        "/projects/project-2-main.jpg",
-        "/projects/project-2-detail.jpg"
+        "/images/WhatsApp Image 2026-02-20 at 6.50.05 AM.jpeg",
+        "/images/WhatsApp Image 2026-02-20 at 2.32.00 PM.jpeg"
     ]
 }
