--- a/content/projects/project-3.json
+++ b/content/projects/project-3.json
@@ -4,7 +4,7 @@
     "category": "وحدات تلفزيون",
     "completionDate": "2025-12-05",
     "images": [
-        "/projects/project-3-main.jpg",
-        "/projects/project-3-detail.jpg"
+        "/images/WhatsApp Image 2026-02-20 at 6.50.05 AM.jpeg",
+        "/images/WhatsApp Image 2026-02-20 at 2.32.00 PM.jpeg"
     ]
 }
