TinaCMS content update
Co-authored-by: work <dodgood78@gmail.com>

--- a/content/projects/project-2.json
+++ b/content/projects/project-2.json
@@ -1,10 +1,10 @@
 {
-    "title": "غرفة ملابس راقية بأبواب انزلاقية",
-    "description": "غرفة ملابس فاخرة بتصميم كلاسيكي حديث مع أبواب مرايا انزلاقية وإضاءة LED داخلية وتنظيم مثالي لكل القطع.",
-    "category": "غرف ملابس",
-    "completionDate": "2025-11-20",
-    "images": [
-        "/projects/project-2-main.jpg",
-        "/projects/project-2-detail.jpg"
-    ]
+  "title": "غرفة ملابس راقية بأبواب انزلاقية",
+  "description": "غرفة ملابس فاخرة بتصميم كلاسيكي حديث مع أبواب مرايا انزلاقية وإضاءة LED داخلية وتنظيم مثالي لكل القطع.",
+  "category": "غرف ملابس",
+  "completionDate": "2025-11-20",
+  "images": [
+    "/images/WhatsApp%20Image%202026-02-20%20at%206.50.05%20AM.jpeg",
+    "/images/WhatsApp%20Image%202026-02-20%20at%202.32.00%20PM.jpeg"
+  ]
 }
