--- a/content/projects/project-2.json
+++ b/content/projects/project-2.json
@@ -1,6 +1,6 @@
 {
   "title": "غرفة ملابس راقية بأبواب انزلاقية",
-  "description": "غرفة ملابس فاخرة بتصميم كلاسيكي حديث مع أبواب مرايا انزلاقية وإضاءة LED داخلية وتنظيم مثالي لكل القطع.",
+  "description": "غرفة ملابس فاخرة بتصميم كلاسيكي حديث مع أبواب مرايا انزلاقية وإضاءة LED داخلية وتنظيم مثالي لكل القطع. dd",
   "category": "غرف ملابس",
   "completionDate": "2025-11-20",
   "images": [
