TinaCMS content update
Co-authored-by: work <dodgood78@gmail.com>

--- a/content/projects/project-2.json
+++ b/content/projects/project-2.json
@@ -5,6 +5,8 @@
   "completionDate": "2025-11-20",
   "images": [
     "/images/WhatsApp%20Image%202026-02-20%20at%202.32.00%20PM.jpeg",
-    "/images/WhatsApp%20Image%202026-02-20%20at%206.50.05%20AM.jpeg"
+    "/images/WhatsApp%20Image%202026-02-20%20at%206.50.05%20AM.jpeg",
+    "/images/WhatsApp%20Image%202026-02-20%20at%206.50.05%20AM.jpeg",
+    "/images/WhatsApp%20Image%202026-02-20%20at%202.32.00%20PM.jpeg"
   ]
 }
